# python_aula_8

./: README.md  etl.py  pipeline.py  pyproject.toml
