[project]
name = "python-aula-8"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Esteves",email = "mat.esteves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandera (>=0.23.1,<0.24.0)",
    "pydantic (>=2.11.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
